# yaggler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  setup.sh
cmake/: deps.cmake  flags.cmake
data/font/: DejaVuSans-Bold.bfont  DejaVuSans-Oblique.bfont  DejaVuSans.bfont  FreeSans.bfont
data/klmb-framework/: defs.frag  defs.glsl  main.frag  main.geom  main.vert
data/klmb-framework/defaults/: default.frag  default.vert
data/shaders/: compositor_test.frag  klmb_test.frag  klmb_test.vert  shader_test.frag  shader_test.vert
data/shaders/bleunw/image/: 9slices.frag  image.frag
data/shaders/bleunw/text/: text.frag  text.vert
data/shaders/dragon/: dragon.frag  dragon.geom  dragon.vert
data/shaders/fsquad/: fsquad.vert
data/shaders/gbuffer/: dof.frag  flash.frag  gbuffer.frag  gbuffer.geom  ground.frag  ssao.frag
data/shaders/gbuffer/deferred_lighting/: point_light.frag
data/shaders/path-tracer/: path-tracer.frag  path-tracer.vert
data/shaders/test/: edge.frag  fract.frag  volume.frag
data/shaders/text/: text.frag  text.geom  text.vert
samples/: CMakeLists.txt
samples/bleunw/basic/: CMakeLists.txt  app.hpp  app_events.hpp  loader.hpp  main.cpp
samples/dev/: CMakeLists.txt  main.cpp
samples/dev-klmb/: CMakeLists.txt  main.cpp
samples/gui-test/: CMakeLists.txt  app.hpp  io.hpp  loader.hpp  main.cpp
samples/klmb/basic/: CMakeLists.txt  main.cpp
samples/path-tracer/: CMakeLists.txt  app.hpp  app_events.hpp  main.cpp
samples/test/: CMakeLists.txt  main.cpp
samples/test-klmb/: CMakeLists.txt  app.hpp  listener.hpp  loader.hpp  main.cpp
samples/yaggler/basic/: CMakeLists.txt  main.cpp
samples_data/font/: DejaVuSans-Bold.bfont  DejaVuSans-Oblique.bfont  DejaVuSans.bfont
samples_data/models/: cube.ply
samples_data/shaders/: 9slices.frag  fract.frag  klmb_test.frag  klmb_test.vert  lab3.frag  shader_test.vert
samples_data/shaders/df-geom/: df.compute  df.frag  df.tcs  df.tes
samples_data/shaders/dragon/: dragon.vert
samples_data/shaders/editor/: cc_res.frag  color_chooser.frag  cursor.frag  mat3.frag  mat4.frag  mat5.frag  mat6.frag  mat6.vert  mat7.frag  mat8.frag  mat9.frag  sel.frag  sel.geom  sel.vert
samples_data/shaders/path-tracer/: path-tracer.frag
samples_data/shaders/tess-render/: tr.frag  tr.tcs  tr.tes  tr.vert
samples_data/shaders/test/: edge.frag  fract.frag  volume.frag
tools/font-generator/: CMakeLists.txt  blur.hpp  main.cpp
yaggler/: CMakeLists.txt  compiler_fixs.hpp  ct_fixed.hpp  ct_point.hpp  ct_point_udl.hpp  glm_udl.hpp  raii_unuser.hpp  raii_use.hpp  setup.hpp  version.hpp  yaggler.cpp  yaggler.hpp  yaggler_except.hpp  yaggler_glfw_window.hpp  yaggler_init.hpp  yaggler_type.hpp
yaggler/bleunw/: animator.hpp  application.hpp  event_manager.hpp  events.hpp  gui.hpp  scene.hpp  task.hpp
yaggler/bleunw/animator/: easing.hpp  make_animator.hpp
yaggler/bleunw/events/: event.hpp  event_listener.hpp
yaggler/bleunw/gui/: font_face.hpp  font_manager.hpp  image.hpp  renderable.hpp  text.hpp
yaggler/bleunw/task/: task.hpp  task_control.hpp  task_scheduler.hpp  types.hpp
yaggler/geometry/: buffer_base.hpp  buffer_view_base.hpp  draw_state_base.hpp  geometry.hpp  opengl_buffer.hpp  opengl_buffer_view.hpp  opengl_draw_state.hpp  opengl_transform_feedback.hpp  opengl_vao.hpp  options.hpp  transform_feedback_base.hpp  vao_base.hpp
yaggler/klmb/: ct_shader_list.hpp  klmb.hpp  klmb_context_helper.hpp  material.hpp  material_usings.hpp
yaggler/klmb/camera/: camera.hpp  camera_holder.hpp
yaggler/klmb/compositor/: compositor.hpp  framebuffer_pack.hpp  generic_compositor.hpp  pass.hpp
yaggler/klmb/compute/: compute.hpp  compute_framework.hpp
yaggler/klmb/gbuffer/: gbuffer.hpp
yaggler/klmb/material/: generic_material.hpp  klmb_context_helper.hpp  material.hpp  material_usings.hpp
yaggler/klmb/model/: model.hpp
yaggler/klmb/object/: aabb.hpp  default_objects.hpp  obb.hpp  object.hpp  transformation_tree.hpp
yaggler/klmb/tools/: ct_shader_list.hpp  ct_shader_type.hpp  ct_texture_list.hpp  make_material_tuple.hpp  make_variable_tuple.hpp  shader_framework.hpp  tools.hpp
yaggler/shader/: common_shader_env.hpp  common_shader_loader.hpp  context.hpp  except.hpp  opengl_program.hpp  opengl_shader.hpp  opengl_uniform_var.hpp  program_base.hpp  shader.hpp  shader_base.hpp  shader_env.hpp  shader_loader.hpp  shader_options.hpp  shader_preprocessor.hpp
yaggler/texture/: frame_buffer_base.hpp  framebuffer_base.hpp  opengl_frame_buffer.hpp  opengl_framebuffer.hpp  opengl_renderbuffer.hpp  opengl_texture.hpp  options.hpp  png_loader.hpp  png_writer.hpp  renderbuffer_base.hpp  texture.hpp  texture_base.hpp
yaggler/threads/: spinlock.hpp
yaggler/tools/: array.hpp  ct_list.hpp  ct_string.hpp  demangle.hpp  embed.hpp  function.hpp  memory_pool.hpp  merge_pack.hpp  ownership.hpp  ref.hpp  string.hpp  tuple.hpp  type_at_index.hpp
